# my-openenv

./: README.md  hackathondetails.txt  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: environment.py  grader.py  models.py
server/: app.py
sql_debugger_env/: Dockerfile  README.md  __init__.py  client.py  executor.py  models.py  openenv.yaml  pyproject.toml  tasks.py
sql_debugger_env/openenv_sql_debugger_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
sql_debugger_env/server/: Dockerfile  __init__.py  app.py  sql_debugger_env_environment.py
tasks/: easy_task.py  hard_task.py  medium_task.py
