[project]
name = "sql-debugger-env"
version = "0.1.0"
description = "SQL Debugger OpenEnv environment"
authors = [
    {name = "Vaishnavi"}
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
server = "server.app:main"